# rules_opa

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  renovate.json
.github/workflows/: ci.yml
examples/custom_signature/: BUILD.bazel  dummy_signer.py  main.rego
examples/generated_files/: BUILD.bazel
examples/multiple_schema_files/: BUILD.bazel  main.rego
examples/simple/: BUILD.bazel  data.json  main.rego  main_test.rego
examples/simple/schemas/: input.json
opa/: defs.bzl  deps.bzl
opa/private/: BUILD.bazel  extensions.bzl  opa_binary.bzl  opa_check.bzl  opa_eval.bzl  opa_eval.sh.tpl  opa_eval_binary.bzl  opa_library.bzl  opa_register_toolchains.bzl  opa_rules_dependencies.bzl  opa_test.bzl  opa_toolchain.bzl
tools/: BUILD.bazel  opa_coverage.py  opa_ctx.py  opa_signer.py  opa_upgrade.py
