module(name = "rules_opa")

bazel_dep(name = "bazel_skylib", version = "1.8.2")

bazel_dep(name = "rules_python", version = "1.6.3")

bazel_dep(name = "rules_proto", version = "7.1.0")

bazel_dep(name = "platforms", version = "1.0.0")

register_toolchains(
    "@rules_opa//tools:opa_linux_amd64_toolchain",
    "@rules_opa//tools:opa_linux_arm64_toolchain",
    "@rules_opa//tools:opa_darwin_amd64_toolchain",
    "@rules_opa//tools:opa_darwin_arm64_toolchain",
    "@rules_opa//tools:opa_windows_amd64_toolchain",
)

internal_deps = use_extension("//opa/private:extensions.bzl", "internal_deps")
use_repo(
    internal_deps,
    "opa_darwin_amd64",
    "opa_darwin_arm64_static",
    "opa_linux_amd64_static",
    "opa_linux_arm64_static",
    "opa_windows_amd64",
    "opa_capabilities_json",
    "opa_builtin_metadata_json",
)
