load("@rules_python//python:defs.bzl", "py_binary")
load("//opa:defs.bzl", "opa_toolchain")

py_binary(
    name = "opa_signer",
    srcs = ["opa_signer.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "opa_ctx",
    srcs = ["opa_ctx.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "opa_upgrade",
    srcs = ["opa_upgrade.py"],
)

toolchain_type(name = "toolchain_type")

opa_toolchain(
    name = "opa_linux_amd64",
    builtin_metadata_json = "@opa_builtin_metadata_json//file",
    capabilities_json = "@opa_capabilities_json//file",
    opa = "@opa_linux_amd64_static//file",
    visibility = ["//visibility:public"],
)

opa_toolchain(
    name = "opa_linux_arm64",
    builtin_metadata_json = "@opa_builtin_metadata_json//file",
    capabilities_json = "@opa_capabilities_json//file",
    opa = "@opa_linux_arm64_static//file",
    visibility = ["//visibility:public"],
)

opa_toolchain(
    name = "opa_macos_amd64",
    builtin_metadata_json = "@opa_builtin_metadata_json//file",
    capabilities_json = "@opa_capabilities_json//file",
    opa = "@opa_darwin_amd64//file",
    visibility = ["//visibility:public"],
)

opa_toolchain(
    name = "opa_macos_arm64",
    builtin_metadata_json = "@opa_builtin_metadata_json//file",
    capabilities_json = "@opa_capabilities_json//file",
    opa = "@opa_darwin_arm64_static//file",
    visibility = ["//visibility:public"],
)

opa_toolchain(
    name = "opa_windows_amd64",
    builtin_metadata_json = "@opa_builtin_metadata_json//file",
    capabilities_json = "@opa_capabilities_json//file",
    opa = "@opa_windows_amd64//file",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "opa_linux_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [],
    toolchain = ":opa_linux_amd64",
    toolchain_type = ":toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "opa_linux_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    target_compatible_with = [],
    toolchain = ":opa_linux_arm64",
    toolchain_type = ":toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "opa_darwin_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [],
    toolchain = ":opa_macos_amd64",
    toolchain_type = ":toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "opa_darwin_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
    target_compatible_with = [],
    toolchain = ":opa_macos_arm64",
    toolchain_type = ":toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "opa_windows_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [],
    toolchain = ":opa_windows_amd64",
    toolchain_type = ":toolchain_type",
    visibility = ["//visibility:public"],
)
