load("@rules_opa//opa:defs.bzl", "opa_binary", "opa_check", "opa_eval", "opa_eval_binary", "opa_library", "opa_test")

opa_library(
    name = "simple",
    srcs = [
        "data.json",
        "main.rego",
    ],
    strip_prefix = package_name(),
    visibility = ["//examples:__subpackages__"],
)

opa_binary(
    name = "simple_bin",
    deps = [":simple"],
)

opa_library(
    name = "simple_wasm",
    entrypoints = ["main/allow"],
    signing_alg = "HS256",
    signing_key = "mysecret",
    target = "wasm",
    deps = [":simple"],
)

opa_test(
    name = "simple_test",
    size = "small",
    srcs = ["main_test.rego"],
    explain = "full",
    deps = [":simple"],
)

opa_check(
    name = "simple_check",
    size = "small",
    bundle = ":simple",
    schema_dir = "schemas",
    schema_files = glob(["schemas/**/*.json"]),
)

opa_eval_binary(
    name = "check_bob",
    input = '{"name":"bob"}',
    query = "data.main.allow",
    deps = [":simple"],
)

opa_eval(
    name = "check_bob_json",
    out = "bob.json",
    input = '{"name":"bob"}',
    query = "data.main.allow",
    deps = [":simple"],
)

exports_files(["schemas/input.json"])
